--- a/configs/x86_64-clean.config
+++ b/configs/x86_64-clean.config
@@ -5,12 +5,18 @@ CONFIG_TARGET_x86_64_DEVICE_generic=y
 CONFIG_TARGET_IMAGES_GZIP=y
 CONFIG_TARGET_ROOTFS_PARTSIZE=1024
 
+# ------------------------------------------------------------
+# LuCI (Clean base UI)
+# ------------------------------------------------------------
 CONFIG_PACKAGE_luci=y
 CONFIG_PACKAGE_luci-ssl=y
 CONFIG_PACKAGE_luci-compat=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_luci-theme-argon=y
 
+# ------------------------------------------------------------
+# Tools & Libraries
+# ------------------------------------------------------------
 CONFIG_PACKAGE_bash=y
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_wget-ssl=y
@@ -18,43 +24,59 @@ CONFIG_PACKAGE_unzip=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_libstdcpp=y
 
-# procps-ng split packages must be enabled together
-CONFIG_PACKAGE_procps-ng=y
-CONFIG_PACKAGE_procps-ng-ps=y
-
+# ------------------------------------------------------------
+# Base security
+# ------------------------------------------------------------
 CONFIG_PACKAGE_ca-bundle=y
 CONFIG_PACKAGE_openssl-util=y
 
+# ------------------------------------------------------------
+# Network utilities
+# ------------------------------------------------------------
 CONFIG_PACKAGE_ip-full=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_tcpdump=y
 CONFIG_PACKAGE_ethtool=y
 CONFIG_PACKAGE_resolveip=y
 
+# ------------------------------------------------------------
+# Firewall / nftables stack (fw4)
+# ------------------------------------------------------------
 CONFIG_PACKAGE_iptables-nft=y
-CONFIG_PACKAGE_iptables=y
-CONFIG_PACKAGE_ip6tables=y
 
+# ------------------------------------------------------------
+# DNS Services (Prefer dnsmasq-full)
+# ------------------------------------------------------------
 CONFIG_PACKAGE_dnsmasq-full=y
 # CONFIG_PACKAGE_dnsmasq is not set
 
+# ------------------------------------------------------------
+# Kernel: Modern nftables & TProxy base (proxy-friendly)
+# ------------------------------------------------------------
 CONFIG_PACKAGE_kmod-tun=y
 CONFIG_PACKAGE_kmod-br-netfilter=y
 CONFIG_PACKAGE_kmod-nft-socket=y
 CONFIG_PACKAGE_kmod-nft-compat=y
 CONFIG_PACKAGE_kmod-nft-tproxy=y
 
-CONFIG_PACKAGE_kmodloader=y
-
+# ------------------------------------------------------------
+# Kernel: iptables compatibility (legacy scripts)
+# ------------------------------------------------------------
 CONFIG_PACKAGE_kmod-ipt-core=y
 CONFIG_PACKAGE_kmod-ipt-nat=y
 CONFIG_PACKAGE_kmod-ipt-tproxy=y
 
+# ------------------------------------------------------------
+# Passwall2 Offline Installation "Must-Haves"
+# ------------------------------------------------------------
 CONFIG_PACKAGE_tcping=y
 CONFIG_PACKAGE_geoview=y
 CONFIG_PACKAGE_v2ray-geoip=y
 CONFIG_PACKAGE_v2ray-geosite=y
 
+# ------------------------------------------------------------
+# Passwall2 Runtime Dependencies (Offline-friendly base)
+# ------------------------------------------------------------
 CONFIG_PACKAGE_libev=y
 CONFIG_PACKAGE_libsodium=y
 CONFIG_PACKAGE_libudns=y
@@ -67,5 +89,6 @@ CONFIG_PACKAGE_coreutils-base64=y
 CONFIG_PACKAGE_coreutils-nohup=y
 CONFIG_PACKAGE_libuci-lua=y
 
+# Common engines (optional but recommended)
 CONFIG_PACKAGE_xray-core=y
 CONFIG_PACKAGE_sing-box=y
