--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,11 +48,7 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-
-          # Extra cleanup to improve available disk on GitHub runners
           sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /usr/local/share/powershell || true
-          sudo rm -rf /usr/share/swift /usr/local/share/boost || true
-          sudo apt-get clean || true
           df -h
 
           SWAP_PATH="/mnt/gh-swapfile"
@@ -234,37 +230,65 @@ jobs:
             openwrt/bin/targets/x86/64/HarryWrt-${{ env.OWRT_BASE }}-${{ env.PROFILE }}-${{ steps.meta.outputs.release }}-${{ env.TARGET }}-*.img.gz
             openwrt/bin/targets/x86/64/SHA256SUMS
 
-      - name: Publish GitHub Release (tag builds only)
+      - name: Publish GitHub Release (gh cli, tag builds only)
         if: startsWith(github.ref, 'refs/tags/')
-        uses: softprops/action-gh-release@v2
-        with:
-          name: HarryWrt Clean 24.10.5 ${{ steps.meta.outputs.release }} - x86_64
-          body: |
-            Base: OpenWrt 24.10.5 (x86_64)
-            Profile: Clean Edition
-
-            Notes:
-            - Argon theme is included but the default UI remains Bootstrap (stock-like).
-            - This build is Passwall2-ready for offline environments:
-              includes tcping/geoview/v2ray-geoip/v2ray-geosite and common runtime deps.
-              Users can upload luci-app-passwall2.ipk locally without relying on remote opkg feeds.
-
-            Recommended:
-            - squashfs-uefi for UEFI systems
-            - squashfs-bios for legacy BIOS systems
-
-            Default:
-            - Hostname: HarryWrt
-            - Timezone: Asia/Hong_Kong
-
-            Rootfs:
-            - 1024MB (1GB)
-
-            Integrity:
-            - SHA256SUMS is attached to this release
-          files: |
-            openwrt/bin/targets/x86/64/HarryWrt-${{ env.OWRT_BASE }}-${{ env.PROFILE }}-${{ steps.meta.outputs.release }}-${{ env.TARGET }}-*.img.gz
-            openwrt/bin/targets/x86/64/SHA256SUMS
-            openwrt/build.log
+        shell: bash
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          set -euo pipefail
+          cd openwrt/bin/targets/x86/64
+
+          REL="${{ steps.meta.outputs.release }}"
+          PREFIX="HarryWrt-${{ env.OWRT_BASE }}-${{ env.PROFILE }}-${REL}-${{ env.TARGET }}"
+          TAG="${GITHUB_REF##*/}"
+
+          cp ../../EL="../../build.log"
+          cp "$REL" ./build.log
+
+          ASSETS=(
+            "${PREFIX}-squashfs-bios.img.gz"
+            "${PREFIX}-squashfs-uefi.img.gz"
+            "${PREFIX}-ext4-bios.img.gz"
+            "${PREFIX}-ext4-uefi.img.gz"
+            "SHA256SUMS"
+            "build.log"
+          )
+
+          echo "Creating release for tag: ${TAG}"
+
+          gh release view "${TAG}" >/dev/null 2>&1 || \
+            gh release create "${TAG}" \
+              --title "HarryWrt Clean 24.10.5 ${REL} - x86_64" \
+              --notes "Base: OpenWrt 24.10.5 (x86_64)
+Profile: Clean Edition
+
+Notes:
+- Argon theme is included but default UI remains Bootstrap (stock-like).
+- Passwall2-ready offline base includes tcping/geoview/v2ray-geoip/v2ray-geosite and common runtime deps.
+
+Recommended:
+- squashfs-uefi for UEFI systems
+- squashfs-bios for legacy BIOS systems
+
+Default:
+- Hostname: HarryWrt
+- Timezone: Asia/Hong_Kong
+
+Rootfs:
+- 1024MB (1GB)
+
+Integrity:
+- SHA256SUMS included"
+
+          echo "Uploading assets..."
+          for f in "${ASSETS[@]}"; do
+            if [ -f "$f" ]; then
+              echo "Uploading: $f"
+              gh release upload "${TAG}" "$f" --clobber || true
+            else
+              echo "Missing asset: $f"
+            fi
+          done
+
+          echo "Release upload completed."
